--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -55,6 +55,10 @@
   justify-content: center;
   align-items: center;
   gap: 1rem;
+
+  .name-user {
+    color: v.$colorAzul;
+  }
   a {
     // border: 1px solid v.$colorAzul;
     padding: 0;
