--- a/src/scss/layout/_UI.scss
+++ b/src/scss/layout/_UI.scss
@@ -11,7 +11,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  transition: all 0.3s ease;
+  transition: all 0.5s ease;
 }
 
 .left {
@@ -120,6 +120,10 @@
   }
 
   .right {
+
+    .name-user{
+      color: v.$blanco;
+    }
     a {
       color: v.$blanco;
 
@@ -127,6 +131,7 @@
         background-color: v.$colorMagenta;
       }
     }
+  
   }
 }
 
